added check to see if a BannerImage url has been saved for a post before trying to fetch file from blob storage otherswise just returns post info without an image